package de.quoridor.exception.setup;

public enum SetupError {
    INVALID_GAME_STATE,
    INVALID_PLAYER_COUNT,
    PLAYER_NOT_FOUND
}
