package de.quoridor.exception.turn;

public enum TurnError {
    INVALID_GAME_STATE,
    INVALID_TURN,
    NOT_CURRENT_PLAYER,
    INVALID_MOVEMENT,
    NO_WALLS_REMAINING,
    INVALID_PLACEMENT
}
