package de.quoridor.game;

public enum GameState {
    SETUP,
    RUNNING,
    FINISHED
}
