@startuml quoridor

' config includes
!include config/styles.iuml

' class diagram (https://plantuml.com/class-diagram)
package app {
    package common {
        class Position <<leaf>> {
            - x: int {readOnly}
            - y: int {readOnly}
            --
            + Position(x: int, y: int)
            + isAlignedTo(other: Position): boolean
            + isAlignedTo(other: Position, orientation: Orientation): boolean
            + isAdjacentTo(other: Position): boolean
            + isAdjacentTo(other: Position, orientation: Orientation): boolean
            + x(): int
            + y(): int
        }

        enum Orientation <<enumeration>> {
            + HORIZONTAL
            + VERTICAL
            --
            + opposite(): Orientation
        }
    }

    package exception {
        package setup {
            class SetupException <<exception>> {
                + SetupException(error: SetupError)
                + getError(): SetupError
            }
            SetupException *-- "1" SetupError : - error: SetupError {readOnly}

            enum SetupError <<enumeration>> {
                + INVALID_GAME_STATE
                + INVALID_PLAYER_COUNT
                + PLAYER_NOT_FOUND
            }
        }

        package turn {
            class TurnException <<exception>> {
                + TurnException(error: TurnError)
                + getError(): TurnError
            }
            TurnException *-- "1" TurnError : - error: TurnError {readOnly}

            enum TurnError <<enumeration>> {
                + INVALID_GAME_STATE
                + INVALID_TURN
                + NOT_CURRENT_PLAYER
                + INVALID_MOVEMENT
                + NO_WALLS_REMAINING
                + INVALID_PLACEMENT
            }
        }
    }

    package game {
        class Board {
            # Board()
            - createFields()
            - initPawnFields()
            + getFields(): Field[][]
            # addPawn(): Pawn
            # removePawn(pawn: Pawn, reposition: boolean)
            - updatePawnFields()
            + movePawn(pawn: Pawn, destination: Field)
            + getPawns(): List<Pawn>
            + placeWall(wall: Wall)
            + revertWall(wall: Wall)
            - getSplitFields(wall: Wall): List<Field[]>
            + getWalls(): Set<Wall>
        }
        Board *-- "81" Field : - fields: Field[][] {readOnly}
        Board --> "4" Field : - startingFields: List<Field> {readOnly}
        Board --> "36" Field : - finishFields: List<Set<Field>> {readOnly}
        Board *-- "2..4" Pawn : - pawns: List<Pawn> {readOnly}
        Board *-- "*" Wall : - walls: Set<Wall> {readOnly}

        class Field {
            # Field(position: Position)
            + getPosition(): Position
            # addNeighbor(field: Field)
            # removeNeighbor(field: Field)
            + getNeighbors(): Set<Field>
            # setPawn(pawn: Pawn)
            + hasPawn(): boolean
            + getPawn(): Pawn
        }
        Field *-- "1" app.common.Position : - position: Position {readOnly}
        Field --> "1..4" Field : - neighbors: Set<Field> {readOnly}
        Field --> "0..1" Pawn : - pawn: Pawn

        class Pawn {
            # Pawn()
            # setField(field: Field)
            + getField(): Field
            # setFinishFields(finishFields: Set<Field>)
            + hasReachedFinish(): boolean
            + getFinishFields(): Set<Field>
        }
        Pawn --> "1" Field : - field: Field
        Pawn --> "9" Field : - finishFields: Set<Field>

        class Wall <<leaf>> {
            + Wall(position: Position, orientation: Orientation)
            + position(): Position
            + orientation(): Orientation
        }
        Wall *-- "1" app.common.Position : - position: Position {readOnly}
        Wall *-- "1" app.common.Orientation : - orientation: Orientation {readOnly}

        class Game {
            - currentPlayerIndex: int
            --
            + Game()
            + getBoard(): Board
            + addPlayer(): Player
            + removePlayer(player: Player)
            - removePlayerSetup(player: Player)
            - removePlayerRunning(player: Player)
            - updatePlayerWallCounts()
            + getCurrentPlayer(): Player
            + getPlayers(): List<Player>
            + start()
            - registerTurnHandlers()
            - getTurnHandler(turn: Turn): TurnHandler<Turn>
            + executeTurn(turn: Turn)
            - finish(winner: Player)
            - nextPlayer()
            + validateTurn(turn: Turn): TurnError
            + generateValidTurns(player: Player): Set<Turn>
            + hasValidTurns(player: Player): boolean
            + getTurnHistory(): Stack<Turn>
            + getState(): GameState
            + getWinner(): Player
        }
        Game *-- "1" Board : - board: Board {readOnly}
        Game *-- "2..4" Player : - players: List<Player> {readOnly}
        Game *-- "*" app.turn.handler.TurnHandler : - turnHandlers: Map<Class<?: Turn>, TurnHandler<?>> {readOnly}
        Game *-- "*" app.turn.handler.TurnGenerator : - turnGenerators: List<TurnGenerator<?>> {readOnly}
        Game *-- "*" app.turn.handler.TurnAvailability : - turnAvailabilitys: List<TurnAvailability<?>> {readOnly}
        Game --> "*" app.turn.Turn : - turnHistory: Stack<Turn> {readOnly}
        Game *-- "1" GameState : - state: GameState
        Game --> "0..1" Player : - winner: Player
        Game ..> app.exception.setup.SetupException : throws
        Game ..> app.exception.turn.TurnException : throws

        enum GameState <<enumeration>> {
            + SETUP
            + RUNNING
            + FINISHED
        }

        class Player {
            - wallCount: int
            --
            # Player(pawn: Pawn)
            + hasWon(): boolean
            + getPawn(): Pawn
            # setWallCount(wallCount: int)
            + reduceWallCount()
            + hasWallsRemaining(): boolean
            + getWallCount(): int
        }
        Player o-- "1" Pawn : - pawn: Pawn {readOnly}
    }

    package turn {
        package handler {
            class MovePawnTurnHandler {
                + execute(board: Board, turn: MovePawnTurn)
                + validate(board: Board, turn: MovePawnTurn): TurnError
                - validateMovement(pawn: Pawn, destination: Field): boolean
                + generate(player: Player): Stream<MovePawnTurn>
                - generateMovements(current: Field): Stream<Field>
                - generateMovementsAtNeighbor(current: Field, neighbor: Field): Stream<Field>
                + any(player: Player): boolean
            }
            TurnHandler <|.. MovePawnTurnHandler : <<bind>> <T -> MovePawnTurn>
            TurnGenerator <|.. MovePawnTurnHandler : <<bind>> <T -> MovePawnTurn>
            TurnAvailability <|.. MovePawnTurnHandler : <<bind>> <T -> MovePawnTurn>

            class PlaceWallTurnHandler {
                + execute(board: Board, turn: PlaceWallTurn)
                + validate(board: Board, turn: PlaceWallTurn): TurnError
                - validatePlacement(board: Board, wall: Wall): boolean
                - positionInvalid(position: Position): boolean
                - positionOccupied(walls: Set<Wall>, position: Position): boolean
                - wallOverlaps(walls: Set<Wall>, wall: Wall): boolean
                - wallBlocksPath(board: Board, wall: Wall): boolean
                - pathExists(pawn: Pawn): boolean
                + any(player: Player): boolean
            }
            TurnHandler <|.. PlaceWallTurnHandler : <<bind>> <T -> PlaceWallTurn>
            TurnAvailability <|.. PlaceWallTurnHandler : <<bind>> <T -> PlaceWallTurn>

            interface TurnHandler<T: Turn> <<interface>> {
                + execute(board: Board, turn: T) {abstract}
                + validate(board: Board, turn: T): TurnError {abstract}
            }

            interface TurnGenerator<T: Turn> <<interface>> {
                + generate(player: Player): Stream<T> {abstract}
            }

            interface TurnAvailability<T: Turn> <<interface>> {
                + any(player: Player): boolean {abstract}
            }
        }

        class MovePawnTurn <<leaf>> {
            + MovePawnTurn(player: Player, destination: Field)
            + player(): Player
            + destination(): Field
        }
        Turn <|.. MovePawnTurn
        MovePawnTurn --> "1" app.game.Player : - player: Player {readOnly}
        MovePawnTurn --> "1" app.game.Field : - destination: Field {readOnly}

        class PlaceWallTurn <<leaf>> {
            + PlaceWallTurn(player: Player, wall: Wall)
            + player(): Player
            + wall(): Wall
        }
        Turn <|.. PlaceWallTurn
        PlaceWallTurn --> "1" app.game.Player : - player: Player {readOnly}
        PlaceWallTurn --> "1" app.game.Wall : - wall: Wall {readOnly}

        interface Turn <<interface>> {
            + player(): Player {abstract}
        }
        note right of Turn : sealed: MovePawnTurn, PlaceWallTurn
    }
}

@enduml
